<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aaxs.nitrov17.materialsharingcard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_2dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frameLayout">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/image"/>

                    <LinearLayout
                        android:id="@+id/linearView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/twitter"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:id="@+id/layoutButtons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <Button
                                style="@style/Button"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"
                                android:text="@string/duplicate" />

                            <Button
                                style="@style/Button"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"
                                android:text="@string/schedule" />

                            <Button
                                style="@style/Button"
                                android:text="@string/delete" />


                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frameLayout"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingExtra="@dimen/dimen_4dp"
                    android:paddingBottom="@dimen/dimen_24dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_48dp"
                    android:text="@string/desc"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_24dp"
                    android:text="@string/italic"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:srcCompat="@mipmap/twitter_logo"
                    android:id="@+id/floatingActionButton"
                    android:backgroundTint="@color/twitter"
                    android:layout_alignBottom="@id/frameLayout"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="-20dp"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:adjustViewBounds="true"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</ScrollView>
